# podolsk-news

./: .gitignore  .gitmodules  Makefile  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  aerich.ini  pyproject.toml
backend/src/: pyproject.toml  settings.py  wsgi.py
backend/src/app/: main.py
backend/src/orm/: db.py  mock.py  models.py
backend/src/orm/migrations/models/: 10_20251003100843_update.py  11_20251003103829_add_auto_now_add_to_cluster_publish_time.py  12_20251003151607_add_some_fields.py  13_20251004145547_drop_fingerprint_index.py  14_20251004145604_remove_article_field.py  15_20251004160121_create_parser_function.py  16_20251004165214_remove_index_from_code.py  17_20251004165543_remove_code_field.py  18_20251005045435_remove_lang_from_article.py  19_20251005045646_update.py  20_20251005164758_change_default_to_status.py  2_20250919062748_base_tables.py  3_20250920063434_made_article_ecosystem.py  4_20250921053525_refactored_user_source_table.py  5_20250921073039_remove_enabled_field_from_user_source_table.py  6_20251001064505_global_refactor.py  7_20251001064812_remove_url_canon.py  8_20251001080825_add_is_default_param_for_source.py  9_20251002115140_add_last_parsing_update_time.py
backend/src/routes/: auth.py  news.py  source.py  telemetry.py  user.py
backend/src/schemes/: auth.py  base.py  news.py  source.py  telemetry.py  user.py
backend/src/utils/: auth.py  cursor.py  enums.py  news.py  redis.py
backend/src/ws/: source.py
deploy/nginx/: podolsk-news.conf  site.prod.conf.tpl
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  DotBouncer.css  api.js  index.css  main.jsx
frontend/src/auth/: AuthPopup.jsx  AuthProvider.jsx  SessionExpiredModal.jsx
frontend/src/components/: AuthPopup.jsx  NewsCard.jsx  NewsFilters.jsx  NewsList.jsx  SourceModal.jsx  ThemeToggle.jsx
frontend/src/components/news/: NewsCard.jsx  NewsFilters.jsx  NewsList.jsx
frontend/src/components/ui/: DateTimeInput.jsx  Image.jsx  MultiSelect.jsx  Switch.jsx  Time.jsx
frontend/src/components/widgets/: Alert.jsx  AnchorScroll.jsx  DotBouncer.jsx  SourceModal.jsx  StatusBadge.jsx  ThemeToggle.jsx
frontend/src/hooks/auth/: AuthPopup.jsx  AuthProvider.jsx
frontend/src/hooks/mobile/: useMobile.jsx
frontend/src/hooks/news/: useFilters.jsx
frontend/src/lib/: api.js  auth.js  config.js  tokenStorage.js  useSourceVerifySocket.js  useWebsocket.js
frontend/src/telemetry/: TelemetryProvider.jsx  useNewsCard.jsx
parser/: CMakeLists.txt  Dockerfile  docs.md  Заброшенный код
parser/feedpplib/: CMakeLists.txt
parser/feedpplib/src/: date.cpp
parser/include/: config.hpp  databaseManager.hpp  llm_topics.hpp  parseDaemon.hpp  react_service.hpp  redis_subscriber.hpp  topic_assigner.hpp  topics_enum.hpp
parser/res/: config.json
parser/src/: databaseManager.cpp  llm_headline.cpp.disabled  llm_topics.cpp  main.cpp  parseDaemon.cpp  react_service.cpp  redis_subscriber.cpp  topic_assigner.cpp
proxy/: nginx.dev.conf
scripts/: nginx_disable_prod.sh  nginx_enable_prod.sh
telegram/: Dockerfile
telegram/src/: .auth_session.py.swp  auth_session.py  db.py  main.py  parser.py  pyproject.toml  settings.py  subscriber.py  utils.py
worker/: Dockerfile  pyproject.toml
worker/src/worker/: main.py
